force-app/main/default/objects/TrackIT__Inventory__c/TrackIT__Inventory__c.object-meta.xml
<CustomObject>
    <description>Stores inventory records in Facility Manager.</description>
    <label>Inventory</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>