force-app/main/default/objects/TrackIT__Inventory__c/fields/Available_through_MMS__c.field-meta.xml
<CustomField>
    <fullName>Available_through_MMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available through MMS</label>
    <type>Checkbox</type>
</CustomField>