force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Bulk_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Backup_Bulk_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account Object (Type=&apos;Supplier&apos;)</inlineHelpText>
    <label>Backup Bulk Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Backup Bulk Supplier)</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>