force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Bulk_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Backup_Bulk_Unit_Price__c</fullName>
    <label>Backup Bulk Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>