force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Bulk_Unit_Product_Website__c.field-meta.xml
<CustomField>
    <fullName>Backup_Bulk_Unit_Product_Website__c</fullName>
    <label>Backup Bulk Unit Product Website</label>
    <type>Url</type>
</CustomField>