force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Indiv_Item_Product_Website__c.field-meta.xml
<CustomField>
    <fullName>Backup_Indiv_Item_Product_Website__c</fullName>
    <label>Backup Indiv Item Product Website</label>
    <type>Url</type>
</CustomField>