force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Indiv_Item_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Backup_Indiv_Item_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup Indiv Item Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Backup Indiv Item Supplier)</relationshipLabel>
    <relationshipName>Inventory_Backup_Indiv_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>