force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Item_Price_by_Bulk_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Backup_Item_Price_by_Bulk_Purchase__c</fullName>
    <label>Backup Item Price by Bulk Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>