force-app/main/default/objects/TrackIT__Inventory__c/fields/Backup_Supplier_Indiv_Item_Ordering_ID__c.field-meta.xml
<CustomField>
    <fullName>Backup_Supplier_Indiv_Item_Ordering_ID__c</fullName>
    <inlineHelpText>Supplier Specific Ordering Id Code (UPC)</inlineHelpText>
    <label>Backup Indiv Item Supplier Ordering ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>