force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Bulk_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Best_Bulk_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account (Type=Supplier)</inlineHelpText>
    <label>Best Bulk Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Best Bulk Supplier)</relationshipLabel>
    <relationshipName>Inventory_Best_Bulk_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>