force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Bulk_Unit_Product_Website__c.field-meta.xml
<CustomField>
    <fullName>Best_Bulk_Unit_Product_Website__c</fullName>
    <label>Best Bulk Unit Product Website</label>
    <type>Url</type>
</CustomField>