force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Indiv_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Best_Indiv_Item_Price__c</fullName>
    <label>Best Indiv Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>