force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Indiv_Item_Product_Website__c.field-meta.xml
<CustomField>
    <fullName>Best_Indiv_Item_Product_Website__c</fullName>
    <label>Best Indiv Item Product Website</label>
    <type>Url</type>
</CustomField>