force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Indiv_Item_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Best_Indiv_Item_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account (Type = Supplier)</inlineHelpText>
    <label>Best Indiv Item Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Best Indiv Item Supplier)</relationshipLabel>
    <relationshipName>Inv_Best_Indiv_Item_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>