force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Item_Price_by_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Best_Item_Price_by_Bulk__c</fullName>
    <label>Best Item Price by Bulk Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>