force-app/main/default/objects/TrackIT__Inventory__c/fields/Best_Supplier_Bulk_Unit_Ordering_ID__c.field-meta.xml
<CustomField>
    <fullName>Best_Supplier_Bulk_Unit_Ordering_ID__c</fullName>
    <inlineHelpText>Id from Supplier for Ordering (UPC)</inlineHelpText>
    <label>Best Bulk Unit Supplier Ordering ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>