force-app/main/default/objects/TrackIT__Inventory__c/fields/Bulk_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Dimensions__c</fullName>
    <label>Bulk Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>