force-app/main/default/objects/TrackIT__Inventory__c/fields/Bulk_Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Unit_Description__c</fullName>
    <inlineHelpText>Unit of Measurement for Bulk Unit</inlineHelpText>
    <label>Bulk Unit of Measurement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>