force-app/main/default/objects/TrackIT__Inventory__c/fields/Bulk_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Weight_lbs__c</fullName>
    <label>Bulk Weight (lbs)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>