force-app/main/default/objects/TrackIT__Inventory__c/fields/In_Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>In_Shopping_Cart__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox for Filter</inlineHelpText>
    <label>In Shopping Cart</label>
    <type>Checkbox</type>
</CustomField>