force-app/main/default/objects/TrackIT__Inventory__c/fields/Indiv_Unit_of_Measurement_Description__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Unit_of_Measurement_Description__c</fullName>
    <label>Indiv Unit of Measurement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>