force-app/main/default/objects/TrackIT__Inventory__c/fields/Individual_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Individual_Dimensions__c</fullName>
    <label>Individual Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>