force-app/main/default/objects/TrackIT__Inventory__c/fields/Inventory_Development_Origination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Development_Origination_Notes__c</fullName>
    <inlineHelpText>Can be used for to dos or notes for origination. Like &apos;Add Manufacturer and Model #&apos;.</inlineHelpText>
    <label>Inventory Development/Origination Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>