force-app/main/default/objects/TrackIT__Inventory__c/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inventory_Type</valueSetName>
    </valueSet>
</CustomField>