force-app/main/default/objects/TrackIT__Inventory__c/fields/Last_Time_Competitive_Price_Shopped__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Competitive_Price_Shopped__c</fullName>
    <label>Last Time Competitive Price Shopped</label>
    <type>Date</type>
</CustomField>