force-app/main/default/objects/TrackIT__Inventory__c/fields/Manufacturer_Model__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Model__c</fullName>
    <formula>Manufacturer_Name__c &amp; &quot; &quot; &amp;  Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer &amp; Model #</label>
    <type>Text</type>
</CustomField>