force-app/main/default/objects/TrackIT__Inventory__c/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <inlineHelpText>Name of Manufacturer</inlineHelpText>
    <label>Manufacturer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>