force-app/main/default/objects/TrackIT__Inventory__c/fields/Manufacturer_Product_Website__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Product_Website__c</fullName>
    <label>Manufacturer Product Website</label>
    <type>Url</type>
</CustomField>