force-app/main/default/objects/TrackIT__Inventory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <inlineHelpText>Manufacturer&apos;s Model Number</inlineHelpText>
    <label>Model #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>