force-app/main/default/objects/TrackIT__Inventory__c/fields/Needs_to_be_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Needs_to_be_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs to be Ordered</label>
    <type>Checkbox</type>
</CustomField>