force-app/main/default/objects/TrackIT__Inventory__c/fields/No_Indiv_Units_in_Bulk_Unit__c.field-meta.xml
<CustomField>
    <fullName>No_Indiv_Units_in_Bulk_Unit__c</fullName>
    <label># of Indiv Units in Bulk Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>