force-app/main/default/objects/TrackIT__Inventory__c/fields/Open_PO__c.field-meta.xml
<CustomField>
    <fullName>Open_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open PO</label>
    <type>Checkbox</type>
</CustomField>