force-app/main/default/objects/TrackIT__Inventory__c/fields/Originate_Item__c.field-meta.xml
<CustomField>
    <fullName>Originate_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check to Get Inventory Originated</inlineHelpText>
    <label>Originate Item</label>
    <type>Checkbox</type>
</CustomField>