force-app/main/default/objects/TrackIT__Inventory__c/fields/Print_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Print_Barcode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Barcode</label>
    <type>Checkbox</type>
</CustomField>