force-app/main/default/objects/TrackIT__Inventory__c/fields/Quantity_Needed_for_Field__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Needed_for_Field__c</fullName>
    <label>Quantity Needed for Field</label>
    <summarizedField>TrackIT__Inv_Location__c.Quantity_Needed__c</summarizedField>
    <summaryFilterItems>
        <field>TrackIT__Inv_Location__c.Store_Location__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TrackIT__Inv_Location__c.TrackIT__Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>