force-app/main/default/objects/TrackIT__Inventory__c/fields/Quantity_to_Build__c.field-meta.xml
<CustomField>
    <fullName>Quantity_to_Build__c</fullName>
    <label># to Build</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>