force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Inventory_Image__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inventory_Image__c</fullName>
    <label>Inventory Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>