force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Manufacturer</valueSetName>
    </valueSet>
</CustomField>