force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Model_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Model_Number__c</fullName>
    <label>Model Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Model_Number</valueSetName>
    </valueSet>
</CustomField>