force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Primary_Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Primary_Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>