force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Reorder_Alert__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Reorder_Alert__c</fullName>
    <inlineHelpText>Alert generated when inventory level falls below the reorder point</inlineHelpText>
    <label>Reorder Alert</label>
    <type>TextArea</type>
</CustomField>