force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Reorder_Point__c</fullName>
    <label>Reorder Point</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>