force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Reorder_Warning__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Reorder_Warning__c</fullName>
    <formula>IMAGE(
IF( TrackIT__Total_Quantity__c &lt; TrackIT__Reorder_Point__c,&quot;/img/samples/flag_red.gif&quot;,
IF(TrackIT__Total_Quantity__c &gt; TrackIT__Reorder_Point__c,&quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_yellow.gif&quot;)),&quot;Warning Flags&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder Warning</label>
    <type>Text</type>
</CustomField>