force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Total_Price__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Total_Price__c</fullName>
    <inlineHelpText>Total price calculated when inventory is received or issued</inlineHelpText>
    <label>Total Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>