force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>TrackIT__Inv_Location__c.TrackIT__Quantity__c</summarizedField>
    <summaryForeignKey>TrackIT__Inv_Location__c.TrackIT__Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>