force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>