force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>