force-app/main/default/objects/TrackIT__Inventory__c/fields/TrackIT__Vendor__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Vendor</valueSetName>
    </valueSet>
</CustomField>