force-app/main/default/objects/TrackIT__Inventory__c/fields/Units_of_Measurement_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Units_of_Measurement_Conversion__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK(Bulk_Unit_Description__c)), NOT(ISBLANK(Indiv_Unit_of_Measurement_Description__c))),
Bulk_Unit_Description__c &amp; &quot; contains &quot; &amp; TEXT(No_Indiv_Units_in_Bulk_Unit__c) &amp; &quot; &quot; &amp; Indiv_Unit_of_Measurement_Description__c &amp; &quot;s. &quot;,
&quot;&quot;
) &amp; IF(NOT(ISBLANK(Indiv_Unit_of_Measurement_Description__c)),
				Indiv_Unit_of_Measurement_Description__c &amp; &quot; is the base unit. &quot;, 
				&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units of Measurement (Conversion)</label>
    <type>Text</type>
</CustomField>