force-app/main/default/objects/TrackIT__Inventory__c/fields/Units_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Units_to_Order__c</fullName>
    <formula>TEXT( Quantity_Needed__c ) &amp; &quot; &quot; &amp;  Indiv_Unit_of_Measurement_Description__c &amp; IF(NOT(ISBLANK(Indiv_Unit_of_Measurement_Description__c)), &quot;(s)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units to Order</label>
    <type>Text</type>
</CustomField>