force-app/main/default/objects/TrackIT__Inventory__c/recordTypes/Concrete_Form.recordType-meta.xml
<RecordType>
    <fullName>Concrete_Form</fullName>
    <active>true</active>
    <label>Concrete Form</label>
</RecordType>