force-app/main/default/objects/TrackIT__Inventory__c/recordTypes/Standard_Inventory.recordType-meta.xml
<RecordType>
    <fullName>Standard_Inventory</fullName>
    <active>true</active>
    <description>Catch-all</description>
    <label>Standard Inventory</label>
</RecordType>