force-app/main/default/objects/TrackIT__Inventory__c/validationRules/TrackIT__InventoryID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__InventoryID_Change_After_Creation_Rule</fullName>
    <active>false</active>
    <description>Prevents users from changing the Inventory Name after the Inventory Name is initially entered.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Inventory Name cannot be changed after initial creation. Please contact your System Administrator to change the Inventory Name after initial creation.</errorMessage>
</ValidationRule>