force-app/main/default/objects/TrackIT__Inventory__c/validationRules/TrackIT__Unit_Price_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Unit_Price_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>TrackIT__Unit_Price__c &lt; 0.00</errorConditionFormula>
    <errorDisplayField>TrackIT__Unit_Price__c</errorDisplayField>
    <errorMessage>The unit price cannot be negative. Please enter zero or greater.</errorMessage>
</ValidationRule>