force-app/main/default/objects/TrackIT__Inventory__c/listViews/All_Inventory.listView-meta.xml
<ListView>
    <fullName>All_Inventory</fullName>
    <columns>ListView_Thumbnail__c</columns>
    <columns>NAME</columns>
    <columns>Needs_to_be_Ordered__c</columns>
    <columns>Print_Barcode__c</columns>
    <columns>TrackIT__Total_Quantity__c</columns>
    <columns>Quantity_Needed_for_Field__c</columns>
    <columns>Quantity_Needed__c</columns>
    <columns>TrackIT__Inventory_Image__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Units_of_Measurement_Conversion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Inventory</label>
</ListView>