force-app/main/default/objects/TrackIT__Inventory__c/listViews/Concrete_Forms.listView-meta.xml
<ListView>
    <fullName>Concrete_Forms</fullName>
    <columns>NAME</columns>
    <columns>Quantity_to_Build__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Type__c</field>
        <operation>equals</operation>
        <value>2a. Concrete Form</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TrackIT__Inventory__c.Concrete_Form</value>
    </filters>
    <label>Concrete Forms</label>
</ListView>