force-app/main/default/objects/TrackIT__Inventory__c/listViews/Machines.listView-meta.xml
<ListView>
    <fullName>Machines</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Type__c</field>
        <operation>equals</operation>
        <value>1. Machine</value>
    </filters>
    <label>Machines</label>
</ListView>