force-app/main/default/objects/TrackIT__Inventory__c/listViews/Needs_Origination.listView-meta.xml
<ListView>
    <fullName>Needs_Origination</fullName>
    <columns>NAME</columns>
    <columns>Originate_Item__c</columns>
    <columns>Inventory_Development_Origination_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Originate_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Needs Origination</label>
</ListView>