force-app/main/default/objects/TrackIT__Inventory__c/listViews/Needs_to_Be_Ordered.listView-meta.xml
<ListView>
    <fullName>Needs_to_Be_Ordered</fullName>
    <columns>ListView_Thumbnail__c</columns>
    <columns>NAME</columns>
    <columns>Units_of_Measurement_Conversion__c</columns>
    <columns>Quantity_Needed__c</columns>
    <columns>Manufacturer_Model__c</columns>
    <columns>Best_Indiv_Item_Product_Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Needs_to_be_Ordered__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Needs to Be Ordered</label>
</ListView>