force-app/main/default/objects/TrackIT__Inventory__c/listViews/Print_All_Inventory.listView-meta.xml
<ListView>
    <fullName>Print_All_Inventory</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Type__c</field>
        <operation>notEqual</operation>
        <value>2a. Concrete Form,4. Mechanic Tool,5. Mechanic Supply,6. Mechanic Box for Truck,7. Part</value>
    </filters>
    <label>Print All Inventory</label>
</ListView>