force-app/main/default/objects/TrackIT__Inventory__c/listViews/Print_Barcode.listView-meta.xml
<ListView>
    <fullName>Print_Barcode</fullName>
    <columns>NAME</columns>
    <columns>Print_Barcode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Print_Barcode__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Print Barcode</label>
</ListView>